# NPUtella

./: .gitignore  Cargo.toml  README.md  build.rs  f17.ahk  keytest.py  main.py  overlay.py  requirements.txt  setup.py  start_nputella.vbs  transcriber.py
.cargo/: config.toml
.github/workflows/: release.yml
installer/: nputella.wxs
scripts/: build-installer.ps1  prepare-release-assets.ps1  publish-release.ps1
src/: audio.rs  code_context.rs  config.rs  context.rs  dictionary_manager.rs  dictionary_store.rs  hotkey.rs  logger.rs  main.rs  mel.rs  phonetic_dictionary.rs  pipeline.rs  single_instance.rs  system.rs  tray.rs  ui.rs  whisper.rs
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
website/src/: App.tsx  index.css
website/src/components/decor/: AppBackground.tsx  Waveform.tsx
website/src/components/dictionary/: DictionaryManager.tsx  EntryEditor.tsx  EntryList.tsx  types.ts
website/src/components/icons/: Logo.tsx
website/src/components/pill/: AudioBars.tsx  PillWidget.tsx  SidePill.tsx  StatusDot.tsx
website/src/components/ui/: Badge.tsx  Button.tsx  Checkbox.tsx  Section.tsx
website/src/hooks/: useInView.ts  usePillDemo.ts
website/src/lib/: color.ts  constants.ts
website/src/sections/: DownloadCTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  ShowcaseSection.tsx
