[package]
name = "nputella"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "nputella"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
cpal = "0.16"
crossbeam-channel = "0.5"
eframe = { version = "0.34", default-features = true, features = ["glow"] }
half = "2"
ndarray = { version = "0.17", features = ["std"] }
once_cell = "1"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "half", "qnn", "api-24"] }
rustfft = "6"
strsim = "0.11"
tokenizers = "0.23"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }
